Atualizado a partir do github

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <h1>Minha página HTML</h1>
     <h2>Minha alteração da página HTML</h2>
+    <p>Alterando no GitHub...</p>
   </body>
 </html>
